# xorcbc

./: CMakeLists.txt
src/: xorcbc.c  xorcbc.h
src/test/: main.c
